[gd_scene load_steps=8 format=3 uid="uid://bfdxo7p0co68v"]

[ext_resource type="Texture2D" uid="uid://bcmbdpdkxl3sq" path="res://teleporters/teleporter_destination.png" id="1_capl1"]
[ext_resource type="Script" uid="uid://dgnd650nkqflh" path="res://teleporters/teleporter_destination.gd" id="1_qlgbt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bm8ww"]
size = Vector2(16, 16)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_capl1"]
blend_mode = 1
light_mode = 1

[sub_resource type="Gradient" id="Gradient_02ohv"]
offsets = PackedFloat32Array(0, 0.38222224, 0.63555557, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.95555556, 0.95555556, 0.95555556, 1, 0.13271606, 0.13271606, 0.13271606, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qlgbt"]
gradient = SubResource("Gradient_02ohv")
width = 8
height = 8
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_h7m5w"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(6, 6, 0)
gravity = Vector3(0, 0, 0)

[node name="TeleporterDestination" type="Area2D" node_paths=PackedStringArray("sprite", "particles")]
script = ExtResource("1_qlgbt")
sprite = NodePath("Sprite2D")
particles = NodePath("GPUParticles2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_bm8ww")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.5019608)
texture_filter = 1
texture = ExtResource("1_capl1")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_capl1")
emitting = false
amount = 30
texture = SubResource("GradientTexture2D_qlgbt")
lifetime = 0.25
one_shot = true
fixed_fps = 60
interpolate = false
fract_delta = false
process_material = SubResource("ParticleProcessMaterial_h7m5w")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
